[gd_scene load_steps=3 format=3 uid="uid://c8q4jvl86qcjg"]

[ext_resource type="Theme" uid="uid://fvqwufpsgvxy" path="res://main_theme.tres" id="1_nrm28"]
[ext_resource type="Script" path="res://uis/hosting_ui.gd" id="2_ukkmt"]

[node name="HostingUI" type="Control" node_paths=PackedStringArray("JoinIP", "JoinPort", "HostPort")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nrm28")
script = ExtResource("2_ukkmt")
JoinIP = NodePath("JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer2/JoinIP")
JoinPort = NodePath("JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer2/JoinPort")
HostPort = NodePath("HostPanel/VBoxContainer/HBoxContainer/VBoxContainer2/HostPort")

[node name="JoinPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -32.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -34.5
offset_right = 124.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Joining"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="JoinPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Label" type="Label" parent="JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "IP:"

[node name="Label2" type="Label" parent="JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Port:"

[node name="VBoxContainer2" type="VBoxContainer" parent="JoinPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="JoinIP" type="LineEdit" parent="JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "localhost"

[node name="JoinPort" type="LineEdit" parent="JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "3434"

[node name="Join" type="Button" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HostPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -34.5
offset_right = 124.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="HostPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Hosting"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HostPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HostPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Label" type="Label" parent="HostPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Port:"

[node name="Label2" type="Label" parent="HostPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Map:"

[node name="VBoxContainer2" type="VBoxContainer" parent="HostPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HostPort" type="LineEdit" parent="HostPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "3434"

[node name="dsafs" type="LineEdit" parent="HostPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "this doesnt do anything rn"

[node name="Host" type="Button" parent="HostPanel/VBoxContainer"]
layout_mode = 2
text = "Host"

[connection signal="pressed" from="JoinPanel/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="HostPanel/VBoxContainer/Host" to="." method="_on_host_pressed"]
